--- a/browser/scss/dashboard/gridbox.scss
+++ b/browser/scss/dashboard/gridbox.scss
@@ -7,6 +7,7 @@
     padding-top: 30px;
     width: 150px;
     margin: 0 auto;
+    background-color: pink;
   }
   h1 {
     text-align: center;
@@ -24,7 +25,7 @@
     .box-header {
         height: 40px;
         background-color: #eee;
-        padding: 0 30px 0 10px; 
+        padding: 0 30px 0 10px;
         border-bottom: 1px solid #ccc;
         cursor: move;
         position: absolute;
@@ -38,6 +39,7 @@
         width: 100%;
         display: inline-block;
         margin-bottom: 10px;
+        margin-top: 10px;
     }
     .box-content {
         height: 100%;
@@ -46,7 +48,7 @@
         top: 8px;
         right: 10px;
         cursor: pointer;
-        position: absolute;  
+        position: absolute;
     }
     a {
         color: #01283f;
